# frameworkkk

./: LLM.md  RECAP_CHANGES.md  debug_boolean.py  debug_parser.py  output.txt  pyproject.toml
src/application/repository/: sessions.contract.json
src/framework/manager/: defender.contract.json  defender.py  executor.contract.json  executor.py  loader.py  messenger.contract.json  messenger.py  presenter.contract.json  storekeeper.contract.json  storekeeper.py  tester.contract.json  tester.py
src/framework/port/: authentication.contract.json  presentation.contract.json
src/framework/service/: bootstrap.dsl  context.py  contract.contract.json  data_driven.test.dsl  diagnostic.py  factory.contract.json  factory.py  factory.test.dsl  flow.contract.json  flow.py  flow.test.dsl  flow2.py  flow2.test.dsl  floww.py  floww.test.dsl  language.contract.json  language.py  language.test.dsl  load.contract.json  load.py  load.test.dsl  run.contract.json  run.py  run.test.dsl  scheme.py  scheme.test.dsl  test.py  test.test.dsl
src/infrastructure/authentication/: supabase.contract.json
src/infrastructure/authorization/: verdict.contract.json
src/infrastructure/message/: console.contract.json  http.py
src/infrastructure/persistence/: redis.contract.json  supabase.contract.json
src/infrastructure/presentation/: starlette.contract.json  starlette.py
tests/: dsl_sanity_check.dsl  run_dsl_sanity.py
