[project]
name = "cloud.colosso"                      # Nome del progetto
version = "0.1.0"                           # Versione dell'app
description = "Un'app di esempio"           # Descrizione del progetto
readme = "README.md"                        # File di documentazione
requires-python = ">=3.9"                   # Versione minima di Python richiesta
key = "rSc4ExXBDvtKF03pHd8W3Kz5VfSW7z0ITQsAR46nELg"                       # Chiave segreta dell'app
mode = "development"                        # Modalita applicazione development/production

[project.policy]
presentation = "web.toml"
persistence = "redis.toml"
message = "log.toml"

[message.backend]
adapter = "redis"
host = "redis-13976.c339.eu-west-3-1.ec2.cloud.redislabs.com"
port = "13976"
database = "database-MJZMYZ6J"
username = "default"
password = "3LkESG6clHa2hJj1zF8CabQlqU50O6zL"

[presentation.backend]
adapter = "starlette"
host = "0.0.0.0"
port = "5000"
#route = "web.xml"
#ssl_keyfile = "key.pem"
#ssl_certfile = "cert.pem"